--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,18 @@
 
 <p>Welcome to Chatty...</p>
 
+<script src="/socket.io/socket.io.js"></script><!-- import socket.io --->
+<script>
+    var socket = io();
+
+    socket.on('connect', function () {
+        console.log('[index.html] Connected to server...');
+    });
+
+    socket.on('disconnect', function () {
+       console.log('[index.html] Disconnected from server...')
+    });
+
+</script>
 </body>
 </html>
