--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,6 @@
 <p>Welcome to Chatty...</p>
 
 <script src="/socket.io/socket.io.js"></script><!-- import socket.io --->
-<script>
-    var socket = io();
-
-    socket.on('connect', function () {
-        console.log('[index.html] Connected to server...');
-    });
-
-    socket.on('disconnect', function () {
-       console.log('[index.html] Disconnected from server...')
-    });
-
-</script>
+<script src="/js/index.js"></script>
 </body>
 </html>
