--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,24 @@
 <head>
     <meta charset="UTF-8">
 </head>
-
 <body>
 
-<p>Welcome to Chatty...</p>
+
+
+<p>...</p>
+
+<ol id="messages"></ol>
+
+<div id="message-form">
+    <input name="message" type="text" placeholder="Message" v-model="message" @keyup.enter="sendMessage" />
+    <button @click="sendMessage">Send</button>
+</div>
+
+
 
 <script src="/socket.io/socket.io.js"></script><!-- import socket.io --->
+<script src="/js/libs/vue.js"></script>
+<script src="/js/libs/jquery-3.1.1.min.js"></script>
 <script src="/js/index.js"></script>
 </body>
 </html>
