--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,28 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/styles.css"/>
 </head>
-<body>
+<body class="chat">
 
-
-
-<ol id="messages"></ol>
-
-<div id="message-form">
-    <input name="message" type="text" placeholder="Message" v-model="message" @keyup.enter="sendMessage" />
-    <button @click="sendMessage">Send</button>
+<div class="chat__sidebar">
+    <h3>People</h3>
+    <div id="users"></div>
 </div>
 
-<button id="send-location">Send Location</button>
+<div class="chat__main">
+    <ol id="messages" class="chat__messages"></ol>
+
+    <div class="chat__footer">
+        <form id="message-form" @submit.prevent="sendMessage">
+            <input name="message" type="text" placeholder="Message" v-model="message" autofocus autocomplete="off" />
+            <button>Send</button>
+        </form>
+
+        <button id="send-location">Send Location</button>
+    </div>
+
+</div>
 
 
 
